# bdworld-chat-localllm

./: .gitignore  performance.md  readme.md  setup.md
backend/: .coveragerc  .env.example  .python-version  PLATFORM_SETUP.md  PYTEST_GUIDE.md  TEST_GUIDE.md  conftest.py  docker-compose-dev.yml  install_windows.md  install_windows_fixed.bat  pyproject.toml  pytest.ini  pytest_run.bat  pytest_run.sh  requirements-base.txt  requirements-linux.txt  requirements-macos.txt  requirements-test.txt  requirements-windows.txt  requirements.txt  requirements_windows.txt  run_linux.sh  run_macos.sh  run_tests.bat  run_tests.sh  run_windows.bat  setup_linux.sh  setup_macos.sh  setup_uv.bat  setup_uv.sh  setup_windows.bat  setup_windows_wsl.sh  test_settings.py  tox.ini
backend/chat/: admin.py  authentication.py  consumers.py  models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/chat/tests/: test_authentication.py  test_integration.py  test_models.py  test_models_pytest.py  test_views.py  test_views_pytest.py  test_websocket.py  test_websocket_pytest.py
backend/chat_project/: asgi.py  settings.py  urls.py
backend/datasets/: cb2a65ec-37b2-4254-90b2-1708e3f0a96a_tmp8mg_owfz.jsonl
backend/llm/: llm_service.py  models.py  serializers.py  urls.py  views.py
backend/llm/management/commands/: download_model.py  manage_prompts.py  manage_rag.py
backend/llm/migrations/: 0001_initial.py
backend/llm/tests/: test_api.py  test_llm_service.py  test_management_commands.py  test_serializers.py  test_views_integration.py
frontend-admin/: package-lock.json  package.json
frontend-admin/frontend-admin/: package-lock.json
frontend-admin/src/: App.test.tsx  App.tsx  config.ts
frontend-admin/src/components/: Layout.test.tsx  Layout.tsx
frontend-admin/src/pages/: Dashboard.test.tsx  Dashboard.tsx  FineTuning.test.tsx  FineTuning.tsx  ModelManagement.test.tsx  ModelManagement.tsx  PromptTemplates.test.tsx  PromptTemplates.tsx  RAGManagement.test.tsx  RAGManagement.tsx
frontend-admin/src/services/: api.test.ts  api.ts
frontend-admin/src/services/__mocks__/: api.ts
frontend-admin/src/types/: index.ts
frontend-chat/: package-lock.json  package.json
frontend-chat/src/: App.test.tsx  App.tsx  config.ts  setupTests.ts
frontend-chat/src/__mocks__/: axios.js
frontend-chat/src/components/: ChatInterface.test.tsx  ChatInterface.tsx  Login.test.tsx  Login.tsx  PrivateRoute.test.tsx  PrivateRoute.tsx  SessionManager.test.tsx  SessionManager.tsx
frontend-chat/src/contexts/: AuthContext.test.tsx  AuthContext.tsx
frontend-chat/src/pages/: Chat.test.tsx  Chat.tsx
frontend-chat/src/services/: api.test.ts  api.ts  websocket.test.ts  websocket.ts
frontend-chat/src/services/__mocks__/: api.ts
frontend-chat/src/types/: index.ts
study/: 01-프로젝트-개요.md  02-백엔드-구조.md  03-프론트엔드-구조.md  04-API-통신.md  05-실시간-채팅.md  06-AI-모델-통합.md  07-시스템-아키텍처.md  08-실습-가이드.md  README.md
study-default/: 00-프로젝트-개요.md  01-웹개발-기초개념.md  02-네트워크와-통신-기초.md  03-데이터베이스-기초.md  04-프로그래밍-패러다임.md  05-보안과-인증-기초.md  06-AI-ML-기초개념.md  07-개발도구와-환경설정.md  08-프로젝트-구조-심화.md  09-문제해결과-디버깅.md  10-LLM-로컬실행-상세.md  README.md
